[package]
name = "trade_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trade_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
# solana-program = "1.18.21"
# thiserror = "1.0.40"
# num-traits = "0.2"
# borsh ="1.5.1"
# num-derive = "0.4.2"
